# QtChat

./: 1.sql  README.md  userinfo.json  在线用户维护.txt  完善点.txt  导入用户.sql  导入用户信息.sql  插入好友.sql  数据库.txt  数据库SQL。。。  文件传输.  服务器处理逻辑.txt  这个是服务器发送数据给客户端的方式说明.txt
Chat/: chat.db
Chat/Chat/: .qmake.stash  Chat.pro  Chat.pro.user.7a760ac  Chat.pro.user.fd159d3  Makefile  allvariable.cpp  allvariable.h  android-libChat.so-deployment-settings.json  chat.db  main.cpp  moc_allvariable.cpp  moc_basicwidget.cpp  moc_bubble.cpp  moc_chatinput.cpp  moc_chatwidget.cpp  moc_colorcombobox.cpp  moc_connecttoserver.cpp  moc_database.cpp  moc_editinformation.cpp  moc_faceitemwidget.cpp  moc_facewidget.cpp  (+20 more)
ChatServer/: CMakeCache.txt  CMakeLists.txt  ChatServer  ChatServer.pro  Makefile  cmake_install.cmake  error.c  error.h  main.c
ChatServer/DataBase/: DataBase.pri  database.c  database.h
ChatServer/DataStructure/: DataStructure.pri  onlinehashtable.c  onlinehashtable.h  onlinelinklist.c  onlinelinklist.h
ChatServer/MessageStructure/: limits.h  messagetype.h  user.c  user.h
ChatServer/NetWork/: NetWork.pri  forward.c  forward.h  marco.h  msgstructure.h  pollfdLink.c  recvfromclient.c  recvfromclient.h  sendtoclient.c  sendtoclient.h  server.c  server.h
ChatServer/Socket/: server.c  server.h  socketmarco.h
ChatServer/Utility/: Utility.pri  utility.c  utility.h
ChatServer/thread/: thread.pri  threadhandle.c
Chat_JavaWeb/: .classpath  .myhibernatedata  .project
Server/: Server.sln
build-ChatServer-Desktop_Qt_5_9_0_GCC_64bit-Debug/: .qmake.stash  ChatServer  Makefile
(+152 files in other folders)
